--- a/style.css
+++ b/style.css
@@ -1,285 +1,122 @@
-body{
-    box-sizing: border-box;
-    font-family: 'poppins',sans-serif;
+*{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'poppins',sans-serif;
 }
-@media (min-width:720px) {
-    
-    /* -------------------------------------------------------------------------------- */
-/* entire view page of dice game */
-.container{
-    width: 100vw;
-    height: 100vh;
-    background-color:#fff;
-    position: fixed;
-    overflow: hidden;
-}
-/* -------------------------------------------------------------------------------- */
-/* Heading of the dice game */
 
-.content{
-    position: relative;
-    justify-content: center;
-    text-align: center;
-    top: 1vh;
-}
-#who{
-    font-size: 3rem;
-    font-weight: 700;
+@media( min-width:480px){
 
-}
-/* -------------------------------------------------------------------------------- */
-/* body of the dice game */
-
-    .body{
-        position: relative;
-        top: 3vh;
-        width: 100vw;
-        
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 10vh 20vh 10 20vh;
-    }
-/* -------------------------------------------------------------------------------- */
-/* player column  */
-    .item{
-        min-width: 30vw;
-        height: 70vh;
-        position: relative;
-        margin: -5vh 2vh;
+    .container{
+        width: 100%;
+        height: auto;
         text-align: center;
-        overflow: hidden;
-    }
-/* -------------------------------------------------------------------------------- */
-/* player button  */
-    .item button{
-        margin-top: 1vh ;
-        padding: 3.5vh 4vh;
-        border-radius: 3vh; 
-        position: relative;
-        color:black ;
-        font-weight: 700;
-        font-size: 20px;
-}
-/* -------------------------------------------------------------------------------- */
-/* player Name  */
-    .item h2{
-        background-color: rgb(60, 110, 3);
-        font-size:3rem ;
-    }
 
-    #diceValueP1{
-        font-size: 4rem;
-        font-family:'poppins' sans-serif;
-        position: relative;  
     }
-    #diceValueP2{
-        font-size: 4rem;
-        font-family:'poppins' sans-serif;
-        position: relative;   
-    }
-    #p1Score{
-        font-size: 2rem;
-        font-family: 'poppins';
-        position: relative;
-    }
-    #p2Score{
-        font-size: 2rem;
-        font-family: 'poppins';
-        position: relative;
-    }
-    .item button:hover{
-        background-color: rgb(17, 73, 73);
-        padding: 3.5vh 4.5vh;
-        border-radius: 3vh;
-    }
-/* -------------------------------------------------------------------------------- */
- /* rolling dice  */
-    .Dice{
-        display: flex;
-        justify-content: center;
-        align-items: baseline;
-    }
-    .img{
-        margin-top: 5vh;
-        background-color: #fff;
-        border: 15px solid rgb(21, 163, 149);
-        border-radius: 25px;
-        width: 250px;
-        height: 250px;
-    }
-    #diceImg{
-        width: 250px;
-        height: 250px;
-    }
-/* -------------------------------------------------------------------------------- */
-/* reset button */
-    .reset{
-        position: fixed;
-        margin-left: 43.5%;
-        margin-top: -5vh;
-        display:inline-block
+    .content{
+        margin-top: 20px;
+        text-align: center;
+        padding: 10px;
         
     }
-    .reset button{
-        color: rgb(5, 26, 5);
-        padding: 3vh 5vh;
-        border-radius: 3vh;
-        background-color: #fff;
+     .content h4{
+        font-weight: 700;
+        color: rgb(43, 13, 72);
+    }
+    .content h1{
         font-size: 30px;
-        font-weight: 900;
+        padding: 20px;
+       letter-spacing: 0.1ch;
+        font-weight: 700;
+        color: rgb(4, 3, 3);
+        text-transform: uppercase;
     }
-    .reset button:hover{
-        color: #fff;
-        background-color:rgb(5, 26, 5);
-        padding: 3.5vh 5.5vh;
-        border-radius: 3.5vh;
-    }
-
-}
-
-@media (max-width:720px) {
-    
-    /* -------------------------------------------------------------------------------- */
-/* entire view page of dice game */
-
-.container{
-    width: 100vw;
-    height: 100vh;
-    background-color:#fff;
-    position: fixed;
-    overflow: hidden;
-
-
-}
-/* -------------------------------------------------------------------------------- */
-/* Heading of the dice game */
-
-.content{
-    position: relative;
-    justify-content: center;
-    text-align: center;
-    padding: 1vh;
-    top: 1vh;
-}
-#who{
-    font-size: 1.5rem;
-    font-weight: 700;
-
-}
-/* -------------------------------------------------------------------------------- */
-/* body of the dice game */
-
     .body{
-        position: relative;
-        top: 3vh;
-        width: 100vw;
+      
+        margin: 20px 50px;
+        margin-top: -80px;
+        min-width: 720px;
+        height: 100vh;
         display: flex;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
-        
-    }
-/* -------------------------------------------------------------------------------- */
-/* player column  */
-    .item{
-        min-width: 30vw;
-        height: 70vh;
-        position: relative;
-        margin: -5vh 2vh;
-        text-align: center;
         overflow: hidden;
     }
-/* -------------------------------------------------------------------------------- */
-/* player button  */
+    .item{
+        min-width: 220px;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        
+    }
+  
+   
     .item button{
-        margin-top: 1vh ;
-        padding: 1vh 2vh;
-        border-radius: 3vh; 
-        position: relative;
-        color:black ;
-        font-weight: 700;
-        font-size: 20px;
-}
-/* -------------------------------------------------------------------------------- */
-/* player Name  */
-    .item h2{
-        background-color: rgb(60, 110, 3);
-        font-size:1.5rem ;
-    }
-
-    #diceValueP1{
-        font-size: 4rem;
-        font-family:'poppins' sans-serif;
-        position: relative;  
-    }
-    #diceValueP2{
-        font-size: 4rem;
-        font-family:'poppins' sans-serif;
-        position: relative;   
-    }
-    #p1Score{
-        font-size: 1rem;
-        font-family: 'poppins';
-        position: relative;
-    }
-    #p2Score{
-        font-size: 1rem;
-        font-family: 'poppins';
-        position: relative;
+        border-radius: 15px;
+        border-color: 5px solid rgb(16, 11, 2);
+        margin-top: 10px;
+        padding: 10px 25px;
+        background-color: rgb(44, 31, 6);
+        color: white;
+        font-size: 16px;
+        font-weight: 400;
     }
     .item button:hover{
-        background-color: rgb(17, 73, 73);
-        padding: 1.5vh 2.5vh;
-        border-radius: 3vh;
-    }
-/* -------------------------------------------------------------------------------- */
- /* rolling dice  */
-    .Dice{
-        display: flex;
-        justify-content: center;
-        align-items: baseline;
-    }
-    .img{
-        margin-top: 10vh;
-        background-color: #fff;
-        width: 120px;
-        height: 150px;
-        border: 6px solid rgb(21, 163, 149);
-        border-radius: 25px;
-        overflow: hidden;
-    }
-    #diceImg{
-        width: 120px;
-        height: 150px;
-    }
-/* -------------------------------------------------------------------------------- */
-/* reset button */
-    .reset{
-        position: fixed;
-        margin-left: 34%;
-        margin-top: -5vh;
-        display:inline-block
+        
+        background-color: rgb(207, 156, 61);
         
     }
-    .reset button{
-        color: rgb(5, 26, 5);
-        padding: 1vh 3vh;
-        border-radius: 3vh;
-        background-color: #fff;
-        font-size: 30px;
+    .item h2{
+       
+        background-color: rgb(58, 176, 28);
+        border: 2px solid black;
+        border-radius: 15px;
+        margin: 40px;
+        padding: 15px 15px;
+    }
+    .item h1{
+        
         font-weight: 900;
+        padding: 20px 40px;   
+    }
+    .count{
+        font-size: 60px;
+        margin-bottom:-10px ;
+    }
+    .diceCenter {
+        margin-top: -50px;
+    }
+    .diceCenter .reset{
+       padding-top: 60px;
+    }
+    .diceCenter .reset button{
+        font-size: 30px;
+        font-weight: 600;
+        padding: 15px 35px;
+        background-color: rgb(140, 10, 58)
+    
     }
     .reset button:hover{
-        color: #fff;
-        background-color:rgb(5, 26, 5);
-        padding: 1.5vh 3.5vh;
-        border-radius: 3.5vh;
+        padding: 16px 36px;
+        background-color: rgb(25, 5, 38);
+        color: aliceblue;
+    }
+    #who{
+        font-size: 40px;
+        font-weight: 900;
+
     }
 
-}
 
+
+
+
+
+}
+@media( min-width:320px)and(max-width:480){
+
+
+}
 
 
